@@ -6,6 +6,7 @@ Bugs fixed:
 - 1693675 Fixed delivery of an indication can lock sfcb
 - 1697772 Fixed provider resolution can fail for associators
 - 1701174 Fixed Bug with ein on classes in interop namespace
+- 1702310 Fixed indProv segfaults while ci with NULL query
 
 Changes in 1.2.2
 ================
